<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!--    App Name-->
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="Logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textSize="@dimen/title_size" />

    <!--    Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/guest_btn"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:background="@color/colorGreen"
            android:text="@string/guest"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>