<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map_frag"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:context=".View.fragments.google_maps" />

    <ListView
        android:id="@+id/lvPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorGreen"
        android:dividerHeight="2px"
        tools:ignore="PxUsage" />
</LinearLayout>