<resources>
    <string name="app_name">Needle Vision</string>
    <string name="guest">Guest</string>
    <string name="login">Login</string>
    <string name="camera">Camera</string>
</resources>